# tiny-alignment-studio

./: .gitignore  Makefile  README.md  pyproject.toml
.context/ai/: coding_rules.md  context_index.yaml
.context/architecture/: system_map.md
.context/decisions/: 001_why_dpo_first.md
.context/plans/: v1_unified_plan.md
.context/vision/: product_manifest.md
configs/: README.md  base.yaml  colab.yaml
configs/experiments/: dpo_tinyllama.yaml  ppo_tinyllama.yaml
configs/schemas/: training_config.schema.json
docs/: architecture.md  quickstart.md
notebooks/: colab_demo.ipynb
scripts/: evaluate.py  prepare_data.py  train.py
src/: README.md  __init__.py  cli.py
src/contracts/: __init__.py  algorithms.py  data.py  events.py  training.py
src/core/: README.md  __init__.py  inference.py  trainer.py
src/core/algorithms/: __init__.py  dpo.py  ppo.py  registry.py
src/core/data/: __init__.py  formatters.py  pipeline.py
src/core/models/: __init__.py  adapters.py  loader.py
src/telemetry/: __init__.py  callbacks.py  events.py
src/ui/: README.md  __init__.py  app.py  state.py
src/ui/components/: chat_widget.py  metric_cards.py  training_charts.py
src/ui/pages/: 1_Training.py  2_Arena.py
src/utils/: __init__.py  config.py  hardware.py  logging.py
tests/: conftest.py
tests/e2e/: test_full_run.py
tests/integration/: test_training_loop.py
tests/unit/: test_callbacks.py  test_config.py  test_contracts.py  test_data_pipeline.py  test_dpo.py  test_ppo.py  test_telemetry.py
